--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
     "react": "^17.0.1",
     "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^1.4.0",
@@ -17,10 +21,11 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "sass": "^1.30.0",
+    "sequelize": "^6.3.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
